# pulsar_metrics

./: .gitignore  .pre-commit-config.yaml  README.md  dataframe_client.csv  metric_compute.ipynb  metric_compute_adel.ipynb  metric_compute_light.ipynb  metric_compute_nb_17oct.ipynb  metric_pulsar_demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: continuous-integration.yaml
data/: california_new.csv  california_ref.csv  kidney_ref.csv
pulsar_metrics/: exceptions.py  utils.py
pulsar_metrics/analyzers/: __init__.py  base.py
pulsar_metrics/metrics/: base.py  constant.py  drift.py  enums.py  performance.py  statistics.py  utils.py
test/: test_utils.py
tests/: TestConfiguration.py  TestInputData.json  TestInputData.yml  test_utils.py
