[tool.poetry]
name = "pulsar-metrics"
version = "0.1.2"
description = "Pulsar-metrics is an open-source Python library for evaluating and monitoring data and concept drift with an extensive set of metrics. It also offers the possibility to use custom metrics defined by the user."
authors = [
  "Adel Benlagra <abenlagra@rocketscience.one>",
  "Pulsar team <pulsar@data-rs.io>"
  ]
readme = "README.md"
homepage = "https://github.com/Rocket-Science-Development/pulsar_metrics"
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.4.3"
scikit-learn = "^1.1.1"
pydantic = "^1.9.1"
DateTime = "^4.5"
scipy = "^1.7"
black = "^22.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
black = "^22.12.0"
isort = "^5.11.2"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.2"

[tool.black]
line-length = 130
target-version = ['py36', 'py37', 'py38', 'py39']
include = '\.pyi?$'
extend-exclude = '''
/(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 130
count = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
